<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/grad"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/statistics_title" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#00cc00"
        android:textStyle="italic"
        android:visibility="invisible"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:text="@string/statistics_hight_score" />
    <TextView
        android:id="@+id/maxScore"
        android:textColor="#00cc00"
        android:layout_width="fill_parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/fullTable"
        android:layout_width="fill_parent"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/statistics_all_results" />
    <TextView
        android:id="@+id/allResults"
        android:layout_width="fill_parent"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>